--- a/index.html
+++ b/index.html
@@ -139,7 +139,15 @@
       <div class="credits">
         <h3>Credits</h3>
         <div class="credits-container">
-        <a href="https://github.com/الصعيد تاج راسك" target="_blank">الصعيد تاج راسك</a>
+          <a href="https://github.com/Al-Azif" target="_blank">Al-Azif</a>
+          <a href="https://github.com/kmeps4" target="_blank">kmeps4</a>
+          <a href="https://github.com/GoldHEN" target="_blank">GoldHEN</a>
+          <a href="https://github.com/Scene-Collective" target="_blank">Scene-Collective</a>
+          <a href="https://github.com/ps4boot" target="_blank">ps4boot</a>
+          <a href="https://github.com/SiSTR0" target="_blank">SiSTR0</a>
+          <a href="https://github.com/EchoStretch" target="_blank">EchoStretch</a>
+          <a href="https://github.com/Nazky" target="_blank">Nazky</a>
+          <a href="https://github.com/AmonRa12" target="_blank">الصعيد تاج راسك</a>
         
         </div>
       </div>
