--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         function DisplayCacheProgress(){setTimeout(function(){;document.title="Cache Success !";},1000);setTimeout(function(){window.location.href = document.referrer;},3000);}window.applicationCache.addEventListener("progress",DLProgress,false);window.applicationCache.oncached=function(e){DisplayCacheProgress();};window.applicationCache.onupdateready=function(e){DisplayCacheProgress();};
     </script>
     <meta charset="UTF-8">
-    <title>AmonPSFree</title>
+    <title>PSFree</title>
     <link rel='stylesheet' href='./css/index.css'>
   </head>
   <body>
@@ -20,7 +20,7 @@
     </div>
 
     <div class="header">
-      <div class="header-title" id="header-title">الصعيد تاج راسك</div>
+      <div class="header-title" id="header-title">PSFree</div>
     </div>
 
     <pre id="update-results" style="white-space: pre-wrap; margin-top: 10px;"></pre>
@@ -41,12 +41,12 @@
     
     <div id="payloads-page" style="display: none;">
       <nav class="floating-menu-payloads">
-        <button id="toolb" onclick="showادواتpayloads()">ادوات</button>
-        <button id="gameb" onclick="showgamepayloads()">العاب</button>
-        <button style="display: none;" id="linuxb" onclick="showlinuxpayloads()">لينكس</button>
+        <button id="toolb" onclick="showtoolspayloads()">Tools</button>
+        <button id="gameb" onclick="showgamepayloads()">Games</button>
+        <button style="display: none;" id="linuxb" onclick="showlinuxpayloads()">Linux</button>
       </nav>
-      <div id="payloads-ادوات" style="display: block;">
-        <h2 id="ادوات">ادوات</h2>
+      <div id="payloads-tools" style="display: block;">
+        <h2 id="tools">Tools</h2>
           <div class="button-container" id="button-container">
             <button id="binloader">Bin-Loader</button>
             <button data-func="load_AppDumper">App-Dumper</button>
@@ -76,7 +76,7 @@
           </div>
       </div>
       <div id="payloads-game" style="display: none;">
-        <h2 id="ادوات">Game</h2>
+        <h2 id="tools">Game</h2>
           <div class="button-container" id="button-container">
             <button data-func="load_GTAArbic">GTAV-ArabicGuy-1.27</button>
             <button data-func="load_GTAArbic3">GTAV-ArabicGuy-1.32</button>
@@ -95,7 +95,7 @@
           </div>
       </div>
       <div id="payloads-linux" style="display: none;">
-          <h2 id="ادوات">Linux</h2>
+          <h2 id="tools">Linux</h2>
           <div class="button-container" id="button-container">
             <h2 style="text-align: center;">PS4</h2>
             <button data-func="load_Linux">1GBVram</button>
@@ -147,8 +147,6 @@
           <a href="https://github.com/SiSTR0" target="_blank">SiSTR0</a>
           <a href="https://github.com/EchoStretch" target="_blank">EchoStretch</a>
           <a href="https://github.com/Nazky" target="_blank">Nazky</a>
-          <a href="https://github.com/AmonRa12" target="_blank">الصعيد تاج راسك</a>
-        
         </div>
       </div>
       <button onclick="closeabout()" class="close-btn" id="close-about"></button>
