--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <button class="menu-btn" id="generate-cache-btn">Force-Cache</button>
       <button class="menu-btn" id="update-exploit">Update-Exploit</button>
       <button onclick="showsettings()" class="menu-btn" id="settings-btn">الإعدادات</button>
-      <button onclick="showabout()" class="menu-btn" id="about-btn">عن الثغرة</button>
+      <button title="عن الثغرة" onclick="showabout()" class="menu-btn" id="about-btn">عن الثغرة</button>
     </div>
 
     <div class="header">
@@ -53,7 +53,7 @@
             <button data-func="load_KernelDumper">Kernel-Dumper</button>
             <button data-func="load_VTXDumper">PS4-Dumper-VTX</button>
             <button data-func="load_App2USB">App2USB</button>
-            <button data-func="load_DisableUpdates">Disable-Updates</button>
+            <button title="بيقفل التحديثات نهائيا" data-func="load_DisableUpdates">Disable-Updates</button> 
             <button data-func="load_EnableUpdates">Enable-Updates</button>
             <button data-func="load_FTP">FTP</button>
             <button data-func="load_HistoryBlocker">History-Blocker</button>
