--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
   <body>
     <!-- Floating Menu -->
     <div class="floating-menu">
-      <button onclick="showpayloads()" class="menu-btn" id="payloadsbtn">الحمولات</button>
+      <button onclick="showex()" class="menu-btn" id="ex-btn">شرح الادوات</button>
+      <button onclick="showpayloads()" class="menu-btn" id="payloadsbtn">الادوات</button>
       <button onclick="showsettings()" class="menu-btn" id="settings-btn">الإعدادات</button>
       <button onclick="showabout()" class="menu-btn" id="about-btn">عن الثغرة</button>
-      <button onclick="showex()" class="menu-btn" id="ex-btn">شرح الادوات</button>
     </div>
 
     <div class="header">
