--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     <div id="payloads-page" style="display: none;">
       <nav class="floating-menu-payloads">
         <button id="toolb" onclick="showtoolspayloads()">الادوات</button>
+         <button id="gameb" onclick="showgamepayloads()">Test</button>
       </nav>
       <div id="payloads-tools" style="display: block;">
         <h2 id="tools">الادوات</h2>
@@ -73,7 +74,12 @@
           </div>
       </div>
     </div>
-      
+    <div id="payloads-game" style="display: none;">
+        <h2 id="tools">Test</h2>
+          <div class="button-container" id="button-container">
+            <button data-func="load_GTAWM138">GTAV-WildeModz-1.38</button>
+          </div>
+      </div>  
     
     <div id="DebugConsole">
       <h3>Debug Console</h3>
