--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div id="payloads-page" style="display: none;">
       <nav class="floating-menu-payloads">
         <button id="toolb" onclick="showtoolspayloads()">الادوات</button>
-         <button id="gameb" onclick="showgamepayloads()">Test</button>
+        <button id="gameb" onclick="showgamepayloads()">Test</button>
       </nav>
       <div id="payloads-tools" style="display: block;">
         <h2 id="tools">الادوات</h2>
@@ -77,6 +77,7 @@
     <div id="payloads-game" style="display: none;">
         <h2 id="tools">Test</h2>
           <div class="button-container" id="button-container">
+            <button data-func="load_GTABQ138">GTAV-BeefQueefMod-1.38</button>
             <button data-func="load_GTAWM138">GTAV-WildeModz-1.38</button>
           </div>
       </div>  
