--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
     <div id="payloads-page" style="display: none;">
       <nav class="floating-menu-payloads">
         <button id="toolb" onclick="showtoolspayloads()">الادوات</button>
-        <button id="gameb" onclick="showgamepayloads()">Test</button>
+        <button id="gameb" onclick="showgamepayloads()">Games</button>
+        <button style="display: none;" id="linuxb" onclick="showlinuxpayloads()">Linux</button>
       </nav>
       <div id="payloads-tools" style="display: block;">
         <h2 id="tools">الادوات</h2>
@@ -75,12 +76,50 @@
       </div>
     </div>
     <div id="payloads-game" style="display: none;">
-        <h2 id="tools">Test</h2>
+        <h2 id="tools">Games</h2>
           <div class="button-container" id="button-container">
+            <button data-func="load_GTAArbic">GTAV-ArabicGuy-1.27</button>
+            <button data-func="load_GTAArbic3">GTAV-ArabicGuy-1.32</button>
+            <button data-func="load_GTAArbic33">GTAV-ArabicGuy-1.33</button>
+            <button data-func="load_GTABQ133">GTAV-BeefQueefMod-1.33</button>
+            <button data-func="load_GTABQ134">GTAV-BeefQueefMod-1.34</button>
             <button data-func="load_GTABQ138">GTAV-BeefQueefMod-1.38</button>
+            <button data-func="load_GTAWM132">GTAV-WildeModz-1.32</button>
+            <button data-func="load_GTAWM133">GTAV-WildeModz-1.33</button>
             <button data-func="load_GTAWM138">GTAV-WildeModz-1.38</button>
+            <button data-func="load_Oysters100">RDR2-OystersMenu-1.00</button>
+            <button data-func="load_Oysters113">RDR2-OystersMenu-1.13</button>
+            <button data-func="load_Oysters119">RDR2-OystersMenu-1.19</button>
+            <button data-func="load_Oysters124">RDR2-OystersMenu-1.24</button>
+            <button data-func="load_Oysters124">RDR2-OystersMenu-1.29</button>
           </div>
       </div>  
+      <div id="payloads-linux" style="display: none;">
+          <h2 id="tools">Linux</h2>
+          <div class="button-container" id="button-container">
+            <h2 style="text-align: center;">PS4</h2>
+            <button data-func="load_Linux">1GBVram</button>
+            <button data-func="load_Linux2gb">2GBVram</button>
+            <button data-func="load_Linux3gb">3GBVram</button>
+            <button data-func="load_Linux4gb">4GBVram</button>
+            <h2 style="text-align: center;">PS4-PRO</h2>
+            <button data-func="load_Linux_PRO">1GBVram</button>
+            <button data-func="load_Linux2gb_PRO">2GBVram</button>
+            <button data-func="load_Linux3gb_PRO">3GBVram</button>
+            <button data-func="load_Linux4gb_PRO">4GBVram</button>
+            <h2 style="text-align: center;">PS4-Baikal</h2>
+            <button data-func="load_Linux_Baikal">1GBVram</button>
+            <button data-func="load_Linux2gb_Baikal">2GBVram</button>
+            <button data-func="load_Linux3gb_Baikal">3GBVram</button>
+            <button data-func="load_Linux4gb_Baikal">4GBVram</button>
+            <h2 style="text-align: center;">PS4-Baikal-PRO</h2>
+            <button data-func="load_Linux_PRO_Baikal">1GBVram</button>
+            <button data-func="load_Linux2gb_PRO_Baikal">2GBVram</button>
+            <button data-func="load_Linux3gb_PRO_Baikal">3GBVram</button>
+            <button data-func="load_Linux4gb_PRO_Baikal">4GBVram</button>
+          </div>
+      </div>
+    </div>
     
     <div id="DebugConsole">
       <h3>Debug Console</h3>
