--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div id="payloads-page" style="display: none;">
       <nav class="floating-menu-payloads">
         <button id="toolb" onclick="showtoolspayloads()">الادوات</button>
-        <button style="display: none;" id="gameb" onclick="showgamepayloads()">Games</button>
+        <button id="gameb" onclick="showgamepayloads()">Games</button>
         <button id="linuxb" onclick="showlinuxpayloads()">Linux</button>
       </nav>
       <div id="payloads-tools" style="display: block;">
