--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
     <div id="payloads-page" style="display: none;">
       <nav class="floating-menu-payloads">
         <button id="toolb" onclick="showtoolspayloads()">الادوات</button>
-        <button id="gameb" onclick="showgamepayloads()">Games</button>
-        <button id="linuxb" onclick="showlinuxpayloads()">Linux</button>
+        <button id="gameb" onclick="showgamepayloads()">Games-تحت التجربة</button>
+        <button id="linuxb" onclick="showlinuxpayloads()">Linux-تحت التجربة</button>
       </nav>
       <div id="payloads-tools" style="display: block;">
         <h2 id="tools">الادوات</h2>
@@ -76,8 +76,8 @@
       </div>
     </div>
     <div id="payloads-game" style="display: none;">
-        <h2 id="tools">Games</h2>
-          <div class="button-container" id="button-container">
+        <h2 id="tools">Games-تحت التجربة</h2>
+          <div class="button-container-g" id="button-container-g">
             <button data-func="load_GTAArbic">GTAV-ArabicGuy-1.27</button>
             <button data-func="load_GTAArbic3">GTAV-ArabicGuy-1.32</button>
             <button data-func="load_GTAArbic33">GTAV-ArabicGuy-1.33</button>
@@ -95,7 +95,7 @@
           </div>
       </div>  
       <div id="payloads-linux" style="display: none;">
-          <h2 id="tools">Linux</h2>
+          <h2 id="tools">Linux-تحت التجربة</h2>
           <div class="button-container" id="button-container">
             <h2 style="text-align: center;">PS4</h2>
             <button data-func="load_Linux">1GBVram</button>
